# py_bazel

./: .bazelrc  .clang-format  .gitignore  WORKSPACE
connectivity_experiments/external_examples/: BUILD  ssh_server.c  ssh_server.cpp
connectivity_experiments/ssh_socket/: BUILD  client_main.cpp  client_main.hpp  client_print.hpp  main.cpp  safe_print.hpp  server_main.cpp  server_main.hpp  server_print.hpp  ssh.cpp  ssh.hpp
connectivity_experiments/tcp_socket/: BUILD  main.cpp
prog_001/: BUILD.bazel  bjarne.cpp  main.py
sys/: BUILD
tools/cpp/: BUILD
